--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@
 
             <img src="./Assets/sp-restaurant 1.2.webp" alt="image not found">
 
-            <div class="sp-restaurant-content">
-                <h1><span style="font-family: 'Caveat', cursive; font-size: 45px;">Salt'n Pepper </span> Restaurants (1992)</h1>
+            <div class="sp-restaurant-content margin-left">
+                <h1><span style="font-family: 'Caveat', cursive; font-size: 35px;">Salt'n Pepper </span> Restaurants (1992)</h1>
                 <p>The Salt’n Pepper Village Restaurant in Lahore is considered to be the restaurant that revolutionized dining experiences in Pakistan. The Village offers classic and modern sub-continental dishes. The village restaurant created a new concept of “Live Buffet” where everything is cooked in front of you in a ‘bazaar’ like atmosphere. The Village is an acclaimed restaurant brand, credited with the promotion of the Pakistani cuisine and the revival of some old recipes. The Village Lahore has an seating capacity of over 300 guests. This restaurant has hosted countless lunches and dinners for local and foreign dignitaries and celebrities like the late Princess Diana, late prime minister of Pakistan Benazir Bhutto, ex-president of Pakistan Gen. (R) Pervez Musharraf and many more.</p>
             </div>
             
@@ -115,7 +115,7 @@
                     <img src="./Assets/spf-1.2.webp" alt="">
                 </div>
 
-                <div class="spf-content-box1">
+                <div class="spf-content-box1 margin-left">
                     <h3><span>Salt'n Pepper </span>  Faislabad</h3>
                     <p>Faisalabad city, also known as Manchester of Pakistan also has a franchise of Salt n Pepper Resturant since November 2016.
                         <br><br>
@@ -147,7 +147,7 @@
 
 
         <div class="sp-express">
-            <h3><span>Salt'n Pepper </span>  Bahawalpur</h3>
+            <h3><span>Salt'n Pepper </span>  Express</h3>
             <br><br>
             <p>Salt n Pepper – the food connoisseur every food lover cherishes. A food brand like no other.</p>
 
