Publications page completed and unlocked

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <div class="nav-menu">
                 <a href="./index.html">Home</a>
                 <a href="#">About Us</a>
-                <a href="#">Publications</a>
+                <a href="./publications.html">Publications</a>
                 <a href="#">Feedback</a>
             </div>
     
