--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="nav-menu">
                 <a href="#">Home</a>
                 <a href="./about.html">About Us</a>
-                <a href="#">Publications</a>
+                <a href="./publications.html">Publications</a>
                 <a href="#">Feedback</a>
             </div>
     
