publications page completed and unlocked

--- a/publications.html
+++ b/publications.html
@@ -65,35 +65,35 @@
                 <div class="box">
                     <h4>Salt’n Pepper Restaurant – Mall Road</h4>
                     <p>26, Mall Road, Lahore, Pakistan</p>
-                    <a href="+92 3112920792">+92 3112920792</a>
+                    <a href="tel:+92 3112920792">+92 3112920792</a>
                 </div>
 
 
                 <div class="box">
                     <h4>Salt’n Pepper Restaurant – Liberty Market</h4>
                     <p>48 – Commercial Zone, Liberty Market, Lahore, Pakistan</p>
-                    <a href="+92 3112920792">+92 3112920792</a>
+                    <a href="tel:+92 3112920792">+92 3112920792</a>
                 </div>
 
 
                 <div class="box">
                     <h4>Salt’n Pepper Village – Lahore</h4>
                     <p>26, Mall Road, Lahore, Pakistan</p>
-                    <a href="+92 3112920792">+92 3112920792</a>
+                    <a href="tel:+92 3112920792">+92 3112920792</a>
                 </div>
 
 
                 <div class="box">
                     <h4>Salt’ n Pepper – Islamabad</h4>
                     <p>Plot# 55, Shabbir Plaza, Blue Area, F-6, Islamabad</p>
-                    <a href="+92 3112920792">+92 3112920792</a>
+                    <a href="tel:+92 3112920792">+92 3112920792</a>
                 </div>
 
 
                 <div class="box">
                     <h4>Salt’n Pepper – Faisalabad</h4>
                     <p>14-Kohinoor City, Faisalabad</p>
-                    <a href="+92 3112920792">+92 3112920792</a>
+                    <a href="tel:+92 3112920792">+92 3112920792</a>
                 </div>
                 
             </div>
