Website Completed all Pages Unlocked

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <a href="./index.html">Home</a>
                 <a href="#">About Us</a>
                 <a href="./publications.html">Publications</a>
-                <a href="#">Feedback</a>
+                <a href="./feedback.html">Feedback</a>
             </div>
     
             <div class="nav-button">
