--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#">Home</a>
                 <a href="./about.html">About Us</a>
                 <a href="./publications.html">Publications</a>
-                <a href="#">Feedback</a>
+                <a href="./feedback.html">Feedback</a>
             </div>
     
             <div class="nav-button">
